--- a/arch/arm/mach-imx/mxs/Kconfig
+++ b/arch/arm/mach-imx/mxs/Kconfig
@@ -12,6 +12,10 @@ config TARGET_MX23_OLINUXINO
 	bool "Support mx23_olinuxino"
 	select BOARD_EARLY_INIT_F
 
+config TARGET_MX23_CHUMBY
+	bool "mx23_chumby krnA hack"
+	select BOARD_EARLY_INIT_F
+
 config TARGET_MX23EVK
 	bool "Support mx23evk"
 	select BOARD_EARLY_INIT_F
@@ -27,6 +31,7 @@ endchoice
 config SYS_SOC
 	default "mxs"
 
+source "board/chumby/mx23_chumby/Kconfig"
 source "board/olimex/mx23_olinuxino/Kconfig"
 source "board/freescale/mx23evk/Kconfig"
 source "board/sandisk/sansa_fuze_plus/Kconfig"
